[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Sounds/FX - Capcom Logo.ogg" type="AudioStream" id=1]
[ext_resource path="res://src/Title/title_bg.png" type="Texture" id=2]
[ext_resource path="res://src/Title/IntroCapcom.gd" type="Script" id=3]
[ext_resource path="res://src/Title/capcom_logo.res" type="SpriteFrames" id=4]
[ext_resource path="res://src/Fonts/X8bitmapfont.fnt" type="BitmapFont" id=5]
[ext_resource path="res://src/Title/IntroAnim.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Sounds/OST - MainTheme.ogg" type="AudioStream" id=7]
[ext_resource path="res://src/Options/MainMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Title/theme_music.gd" type="Script" id=9]
[ext_resource path="res://src/Options/pulse.gd" type="Script" id=10]
[ext_resource path="res://src/Title/title_gradient_bg.png" type="Texture" id=11]
[ext_resource path="res://src/Title/title_electronics_bg.png" type="Texture" id=12]

[node name="CapcomLogo" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="black" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 198, 112 )
z_index = 2
texture = ExtResource( 2 )

[node name="capcom_logo" type="AnimatedSprite" parent="."]
position = Vector2( 197, 108 )
frames = ExtResource( 4 )
animation = "idle"

[node name="capcom_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "SFX"

[node name="inspired" type="Label" parent="."]
margin_left = 133.0
margin_top = 81.0
margin_right = 263.0
margin_bottom = 108.0
custom_colors/font_color = Color( 0.639216, 0.713726, 0.898039, 1 )
custom_colors/font_color_shadow = Color( 0.270588, 0.270588, 0.270588, 1 )
custom_fonts/font = ExtResource( 5 )
text = "INSPIRED_BY"
align = 1

[node name="IntroAnim" parent="." instance=ExtResource( 6 )]
pause_mode = 1
z_index = -20
z_as_relative = false

[node name="theme_music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = -8.0
bus = "Music"
script = ExtResource( 9 )
play_on_start = false

[node name="MainMenu" parent="." instance=ExtResource( 8 )]
visible = false

[node name="bg2_mask" type="Light2D" parent="."]
position = Vector2( 199, 112 )
texture = ExtResource( 12 )
mode = 3
range_item_cull_mask = 512
script = ExtResource( 10 )

[node name="bg2" type="Sprite" parent="."]
visible = false
light_mask = 512
position = Vector2( 198, 112 )
scale = Vector2( 1e-05, 1e-05 )
z_index = -3
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 396, 224 )

[node name="blackness2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 199, 112 )
z_index = -1000
texture = ExtResource( 2 )

[node name="menuButton" type="MenuButton" parent="."]
margin_right = 398.0
margin_bottom = 223.0

[connection signal="button_down" from="menuButton" to="." method="_on_menuButton_button_down"]
